# drafting-canvas

./: .eslintrc  .firebaserc  .gcloudignore  .gitignore  Cargo.toml  LICENSE.md  README.md  app.yaml  database.js  firebase.json  next.config.js  package-lock.json  package.json  primus copy.js  primus.js  reduces.js  server.js  store-state.json  store.json  test.js  tsconfig.json  tsconfig.tsbuildinfo  webpack.reducers.js
.github/workflows/: firebase-hosting-merge.yml  (+1 more)
components/: canvas.tsx  defaults.tsx  element.tsx  navbar.tsx  picker.tsx  properties.tsx  settings.ts  settings.tsx  sheet.tsx  structure.tsx  toolbar.tsx
database/: 111.json  222.json  test.json
datastate/: 11.json  111.json  211.json  222.json  2222.json  2223.json  2224.json  333.json  555.json  test-100.json  test-1000.json
hooks/: get-page.ts  use-is-visible.ts
pages/: [page].tsx  _app.tsx  index.tsx  sheet.tsx
public/: global.css  manifest.json  menu.css  robots.txt  sw.js  sw.js.map
reducers/: actions.ts  creation.ts  cursor.ts  reducer.js  reducers.js  reducers.min.js  reducers.ts  tools.ts  user.ts
redux/: initial-state.ts  slice.ts  store.ts  stores.ts  undo.ts
redux-scuttlebutt/: README.md  client.ts  dispatcher.ts  get-delayed-dispatch.ts  init-state-sync.ts  package.json  snapshot.ts
server/: server.js  server.ts  test.ts
src/: colors.rs  lib.rs
state/: dev.ts  initial.ts  max.ts
types/: box-types.ts  color-types.ts  element-types.ts  user-types.ts
utils/: adjectives.ts  animals.ts  colors.ts  fonts.ts  get-fonts.ts  initial-theme.ts  persistent.ts  utils.ts
(+136 files in other folders)
