[package]
name = "index"
version = "0.1.0"
authors = ["David Ireland"]
edition = "2018"
description = "2D canvas rendering engine for Drafting Canvas"
repository = "https://github.com/DavidIreland1/drafting-canvas"
license = "mit"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "*", features = ["serde-serialize"] } #
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
log = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
